# p2c

./: README.md  pyproject.toml
src/: __init__.py  cli.py  executor.py  input.py  output.py  p2c.py  projet.py
src/data_modele/: __init__.py  node.py  project.py
src/fsm/: FSMProjectManager.py  __init__.py
src/misc/: graph.py
